--- a/html/tournamentSheet.html
+++ b/html/tournamentSheet.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../assets/css/navbar.css" />
     <link rel="stylesheet" href="../assets/css/footer.css" />
     <link rel="stylesheet" href="../assets/css/tournamentSheet.css" />
-  </head> 
+  </head>
   <body>
     <header>
       <!-- NAVBAR TOP mobile qui sera display: none avec @media -->
@@ -68,7 +68,10 @@
           </li>
           <li class="divider-nav"></li>
           <li>
-            <img src="../assets/img/General/feedback.png" alt="Icone feedback" />
+            <img
+              src="../assets/img/General/feedback.png"
+              alt="Icone feedback"
+            />
             <a href="">Feedback</a>
           </li>
         </ul>
@@ -87,9 +90,162 @@
           </li>
         </ul>
       </nav>
+      <div class="container-list-sub-desktop">
+        <div class="list-sub">
+          <h2>Participant :</h2>
+          <ul>
+            <li><a href="">Joueur 1</a></li>
+            <li><a href="">Joueur 2</a></li>
+            <li><a href="">Joueur 3</a></li>
+            <li><a href="">Joueur 4</a></li>
+            <li><a href="">Joueur 5</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <h1>Feuille du tournoi :</h1>
+      <div class="main-container-tournament-sheet">
+        <div class="info-general-tournament-sheet">
+          <div class="title-sheet-tournament">
+            <h2>Information générale</h2>
+            <img
+              src="../assets/img/General/arrow-down-sign-to-navigate.png"
+              alt="fleche pour ouvrir et fermer la fenetre des parametre"
+              class="dropdown"
+            />
+          </div>
+          <div class="container-info-description">
+            <div class="card-tournament-sheet">
+              <img
+                src="../assets/img/General/MiniBannière-lol323x100.webp"
+                alt="Banniere du tournoi"
+              />
+              <div class="info-card">
+                <h3>Titre :</h3>
+                <h4 class="titre">
+                  T1 tournament | 16team | Elimination direct | Cashprize 2500RP
+                </h4>
+                <div class="container-divider-card">
+                  <div class="container-left">
+                    <h3>Jeux :</h3>
+                    <p>League of legend</p>
+                    <h3>Région :</h3>
+                    <p>Eu West</p>
+                    <h3>Date :</h3>
+                    <p>20 / 12 / 2024</p>
+                  </div>
+                  <div class="container-right">
+                    <h3>Plateforme :</h3>
+                    <p>PC</p>
+                    <h3>Type :</h3>
+                    <p>Privée</p>
+                    <h3>Heure</h3>
+                    <p>09:00 PM CET</p>
+                  </div>
+                </div>
+                <h3>Discord :</h3>
+                <p>https://discord.gg/QJmFR7Fg</p>
+                <h3>Nb de joueurs</h3>
+                <p>
+                  <span id="sub-players">1</span> /
+                  <span id="total-players">16</span>
+                </p>
+              </div>
+            </div>
+            <div class="divider-sheet-tournament"></div>
+            <div class="description-tournament">
+              <h3>Description</h3>
+              <p>
+                Tournoi inter-écoles organisé par La Manu : affrontez les
+                meilleures équipes des écoles de votre région dans une
+                compétition intense ! =^_^=
+              </p>
+              <div class="divider-sheet-tournament"></div>
+              <h3>Règles</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+                vel lectus ante. Suspendisse ac neque molestie, interdum velit
+                eget, suscipit metus. Donec dignissim nulla mi, lacinia commodo
+                quam vel. Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Mauris vel lectus ante. Suspendisse ac neque molestie,
+                interdum velit eget, suscipit metus. Donec dignissim nulla mi,
+                lacinia commodo quam vel. Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Mauris vel lectus ante. Suspendisse
+                ac neque molestie, interdum velit eget, suscipit metus. Donec
+                dignissim nulla mi, lacinia commodo quam vel.
+              </p>
+              <div class="divider-sheet-tournament"></div>
+              <h3>Prix</h3>
+              <p>
+                1st : Lorem ipsum dolor sit amet,<br /><br />
+                2nd & 3rd : Lorem ipsum dolor sit amet,<br /><br />
+                3e & 5e : Lorem ipsum dolor sit amet,
+              </p>
+            </div>
+            <div class="container-cta">
+              <button class="cta"><a href="">Modifier</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="main-container-structure">
+        <div class="container-structure-tournament">
+          <div class="title-sheet-tournament">
+            <h2>Structure du tournoi</h2>
+            <img
+              src="../assets/img/General/arrow-down-sign-to-navigate.png"
+              alt="fleche pour ouvrir et fermer la fenetre des parametre"
+              class="dropdown"
+            />
+          </div>
+          <div class="structure-tournament">
+            <img
+              src="../assets/img/General/exempleArbreTournois.png"
+              alt="exemple de structure"
+            />
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- <footer>
+      <div class="container-footer">
+        <div class="contact">
+          <h3>Contactez-nous</h3>
+          <div class="divider-footer"></div>
+          <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
+          <p>Email : Admin-gt@gaming-tournament.com</p>
+          <p>Téléphone : 01.51.52.41.42. 43</p>
+          <a
+            href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
+            target="_blank"
+            class="block"
+            >Mention-légales</a
+          >
+          <a
+            href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
+            target="_blank"
+            class="block"
+            >Politique de confidentialité</a
+          >
+          <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
+            <img src="../assets/img/General/facebook.png" alt="Icone facebook"
+          /></a>
+          <a href="https://www.instagram.com" target="_blank">
+            <img
+              src="../assets/img/General/instagram.png"
+              alt="Icone instagram"
+          /></a>
+          <a href="https://x.com/?lang=fr" target="_blank">
+            <img src="../assets/img/General/twitter.png" alt="Icone twitter"
+          /></a>
+        </div>
+
+        <div class="copyright">
+          <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
+        </div>
+      </div>
+    </footer> -->
 
     <script src="../assets/javascript/tournamentSheet.js"></script>
     <script src="../assets/javascript/animationNavbar.js"></script>
